# user-adaptive-swarm-interfaces

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  pyproject.toml
docs/: conf.py  index.rst
docs/eye_tracker/: index.rst
docs/workload_inference/: index.rst  nback_experiment.rst
research/cognitive_load_models/: pyproject.toml
research/cognitive_load_models/notebooks/: 00_dump_it_all.ipynb  01_explore_datasets.ipynb  02_preprocessing_pipeline.ipynb  03_features.ipynb  03_models.ipynb  04_models.ipynb  05_validation.ipynb
research/cognitive_load_models/src/cognitive_models/: features.py  gaze_utils.py  interpolate.py  preprocessing.py  pupil_utils.py
services/eye_tracker/: pyproject.toml
services/eye_tracker/src/eye_tracker/: calibration.py  constants.py  main.py  stream.py
services/workload_inference/: pyproject.toml
services/workload_inference/src/workload_inference/: data_structures.py  experiment.py  generator.py  helper_scripts.py  main.py  offline_inference.py  plot_command_limits.py  plot_results.py  processing.py  py_receiver.py  test_data.py  utilities.py  visualize.py
services/workload_inference/src/workload_inference/data/: data_structures.py  py_receiver.py  writers.py
services/workload_inference/src/workload_inference/experiment/: app.py  manager.py
services/workload_inference/src/workload_inference/experiments/: base.py  manager.py  window.py
services/workload_inference/src/workload_inference/eye_metrics/: features.py  gaze_utils.py  interpolate.py  preprocessing.py  pupil_utils.py
services/workload_inference/src/workload_inference/inference/: __init__.py  engine.py  filters.py  online_stats.py  settings.py
services/workload_inference/src/workload_inference/utils/: api.py  constants.py  generator.py  utilities.py
services/workload_inference/src/workload_inference/visualizer/: gaze.py  replay.py
services/workload_models/: dockerfile  pyproject.toml
services/workload_models/src/workload_models/: main.py
src/user_adaptive_swarm_interfaces/: data_structures.py  py_receiver.py  utilities.py
