[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "user-adaptive-swarm-interface"
version = "0.1.0"
description = "A project for classical machine learning and statistical analysis"
readme = "README.md"
requires-python = ">=3.12   "
authors = [
    {name = "Alexandre Hebert", email = "alexandre.hebert@epfl.ch"}
]
license = {text = "MIT"}
keywords = ["machine-learning", "statistical-analysis", "swarm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Repository = "https://github.com/Alex0021/user-adaptive-swarm-interfaces.git"

[tool.setuptools]
packages = ["user_adaptive_swarm_interfaces"]