[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-models"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "matplotlib",
  "seaborn",
  "jupyter",
  "tqdm"
]

[tool.uv]
dev-dependencies = [
  "ipykernel",
  "black",
  "ruff"
]